答辩修改稿

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -28,7 +28,7 @@
 
 @Book{FHWA2005Highway,
   title     = {Highway and rail transit tunnel inspection manual},
-  publisher = {Federal highway administration},
+  publisher = {Federal Highway Administration},
   year      = {2005},
   author    = {FHWA},
   address   = {US},
@@ -177,7 +177,7 @@
 @Article{Li2015Experimental,
   author  = {Li, Xiaojun and Yan, Zhiguo and Wang, Zhen and Zhu, Hehua},
   title   = {Experimental and analytical study on longitudinal joint opening of concrete segmental lining},
-  journal = {Tunnelling and Underground Space Technology incorporating Trenchless Technology Research},
+  journal = {Tunnelling and Underground Space Technology Incorporating Trenchless Technology Research},
   year    = {2015},
   volume  = {46},
   number  = {46},
@@ -346,7 +346,7 @@
 @Article{mishalani2002computation,
   author    = {Mishalani, Rabi G and Madanat, Samer M},
   title     = {Computation of infrastructure transition probabilities using stochastic duration models},
-  journal   = {Journal of Infrastructure systems},
+  journal   = {Journal of Infrastructure Systems},
   year      = {2002},
   volume    = {8},
   number    = {4},
@@ -357,7 +357,7 @@
 @Article{chu2005estimation,
   author  = {Chu, C and Durango-Cohen, P},
   title   = {Estimation of latent infrastructure performance models using time series analysis},
-  journal = {ASCE Journal of Transportation Engineering (under review)},
+  journal = {ASCE Journal of Transportation Engineering},
   year    = {2005},
 }
 
@@ -458,14 +458,14 @@
 @Article{解福奇2009时态,
   author    = {解福奇 and 朱合华 and 李晓军 and 孙雪兵},
   title     = {时态 GIS 数据模型及其在隧道工程中的应用},
-  journal   = {地下空間與工程學報},
+  journal   = {地下空间与工程学报},
   year      = {2009},
   volume    = {5},
   number    = {3},
   pages     = {546--552},
   lang      = {zh},
   pinyin    = {xiefujianzhuhehualixiaojunsunxuebin},
-  publisher = {重慶大學期刊社},
+  publisher = {重庆大学期刊社},
 }
 
 @Article{刘振平20173d,
@@ -697,12 +697,13 @@
 }
 
 @PhdThesis{段怀志2009隧道及地下工程健康评估研究,
-  author = {段怀志},
-  title  = {隧道及地下工程健康评估研究},
-  school = {重庆交通大学},
-  year   = {2009},
-  lang   = {zh},
-  pinyin = {duanhuaizhi},
+  author  = {段怀志},
+  title   = {隧道及地下工程健康评估研究},
+  school  = {重庆交通大学},
+  year    = {2009},
+  address = {重庆},
+  lang    = {zh},
+  pinyin  = {duanhuaizhi},
 }
 
 @PhdThesis{张素磊2012隧道衬砌结构健康诊断及技术状况评定研究,
@@ -762,7 +763,7 @@
 @Article{chen2009numerical,
   author    = {Chen, JS and Mo, HH},
   title     = {Numerical study on crack problems in segments of shield tunnel using finite element method},
-  journal   = {Tunnelling and underground space technology},
+  journal   = {Tunnelling and Underground Space Technology},
   year      = {2009},
   volume    = {24},
   number    = {1},
@@ -868,7 +869,7 @@
 @Article{kushida1997development,
   author    = {Kushida, Moriyoshi and Miyamoto, Ayaho and Kinoshita, Kazuya},
   title     = {Development of concrete bridge rating prototype expert system with machine learning},
-  journal   = {Journal of computing in civil engineering},
+  journal   = {Journal of Computing in Civil Engineering},
   year      = {1997},
   volume    = {11},
   number    = {4},
@@ -897,7 +898,7 @@
 
 @Article{astm20096433,
   author  = {ASTM, D},
-  title   = {6433-07 Standard Practice for Roads and Parking Lots Pavement Condition Index Surveys},
+  title   = {Standard Practice for Roads and Parking Lots Pavement Condition Index Surveys},
   journal = {ASTM International, West Conshohocken, Pennsylvania},
   year    = {2009},
 }
@@ -949,7 +950,7 @@
   title     = {基于盾构隧道激光扫描点云的收敛直径定点计算方法},
   journal   = {工程勘察},
   year      = {2016},
-  number    = {2016 年 12},
+  number    = {12},
   pages     = {52--55},
   lang      = {zh},
   pinyin    = {lijiapingluzhonghe},
@@ -959,14 +960,14 @@
 @Article{胥犇2010盾构隧道结构病害状态综合评价方法研究,
   author    = {胥犇 and 王华牢 and 夏才初},
   title     = {盾构隧道结构病害状态综合评价方法研究},
-  journal   = {地下空間與工程學報},
+  journal   = {地下空间与工程学报},
   year      = {2010},
   volume    = {6},
   number    = {1},
   pages     = {201--207},
   lang      = {zh},
   pinyin    = {xubenwanghualaoxiacaichu},
-  publisher = {重慶大學期刊社},
+  publisher = {重庆大学期刊社},
 }
 
 @MastersThesis{朱宝林2014运营地铁盾构隧道状态评估及预测方法研究,
@@ -1117,7 +1118,7 @@
 @Article{wold1987principal,
   author    = {Wold, Svante and Esbensen, Kim and Geladi, Paul},
   title     = {Principal component analysis},
-  journal   = {Chemometrics and intelligent laboratory systems},
+  journal   = {Chemometrics and Intelligent Laboratory systems},
   year      = {1987},
   volume    = {2},
   number    = {1-3},
@@ -1128,7 +1129,7 @@
 @Article{thompson2005canonical,
   author    = {Thompson, Bruce},
   title     = {Canonical correlation analysis},
-  journal   = {Encyclopedia of statistics in behavioral science},
+  journal   = {Encyclopedia of Statistics in Behavioral Science},
   year      = {2005},
   publisher = {Wiley Online Library},
 }
@@ -1136,7 +1137,7 @@
 @Article{cheng1999evaluating,
   author    = {Cheng, Ching-Hsue and Yang, Kuo-Lung and Hwang, Chia-Lung},
   title     = {Evaluating attack helicopters by AHP based on linguistic variable weight},
-  journal   = {European journal of operational research},
+  journal   = {European Journal of Operational Research},
   year      = {1999},
   volume    = {116},
   number    = {2},
@@ -1191,7 +1192,7 @@
 
 @Book{hamilton1994time,
   title     = {Time series analysis},
-  publisher = {Princeton university press},
+  publisher = {Princeton University Press},
   year      = {1994},
   author    = {Hamilton, James Douglas},
   volume    = {2},
@@ -1201,7 +1202,7 @@
 @Article{dickey1979distribution,
   author    = {Dickey, David A and Fuller, Wayne A},
   title     = {Distribution of the estimators for autoregressive time series with a unit root},
-  journal   = {Journal of the American statistical association},
+  journal   = {Journal of the American Statistical Association},
   year      = {1979},
   volume    = {74},
   number    = {366a},
@@ -1212,7 +1213,7 @@
 @InCollection{akaike2011akaike,
   author    = {Akaike, Hirotugu},
   title     = {Akaike’s information criterion},
-  booktitle = {International encyclopedia of statistical science},
+  booktitle = {International Encyclopedia of Statistical Science},
   publisher = {Springer},
   year      = {2011},
   pages     = {25--25},
@@ -1220,9 +1221,9 @@
 }
 
 @Article{schwarz1978estimating,
-  author    = {Schwarz, Gideon and others},
+  author    = {Schwarz, Gideon},
   title     = {Estimating the dimension of a model},
-  journal   = {The annals of statistics},
+  journal   = {The Annals of Statistics},
   year      = {1978},
   volume    = {6},
   number    = {2},
@@ -1242,7 +1243,7 @@
 @Article{liitkepohl1991introduction,
   author  = {Liitkepohl, Helmut},
   title   = {Introduction to multiple time series analysis},
-  journal = {Berlin et al},
+  journal = {Berlin},
   year    = {1991},
 }
 
@@ -1269,7 +1270,7 @@
 
 @Book{fielding2000architectural,
   title     = {Architectural styles and the design of network-based software architectures},
-  publisher = {University of California, Irvine Doctoral dissertation},
+  publisher = {University of California, Irvine Doctoral Dissertation},
   year      = {2000},
   author    = {Fielding, Roy T and Taylor, Richard N},
   address   = {Irvine},
@@ -1475,7 +1476,7 @@
 @Article{cressie1988spatial,
   author    = {Cressie, Noel},
   title     = {Spatial prediction and ordinary kriging},
-  journal   = {Mathematical geology},
+  journal   = {Mathematical Geology},
   year      = {1988},
   volume    = {20},
   number    = {4},
@@ -1487,7 +1488,7 @@
   title     = {空间变异理论及应用},
   publisher = {科学出版社},
   year      = {2005},
-  author    = {张仁铎 and 博士},
+  author    = {张仁铎},
   address   = {北京},
   lang      = {zh},
   pinyin    = {zhangrenze},
@@ -1587,10 +1588,10 @@
 
 @Article{郭孟欣2016基于网格的铁路建设工程风险指数评价模型研究,
   author    = {郭孟欣 and 钟雁 and 王福田 and 杨惠文 and others},
-  title     = {基于网格的铁路建设工程风险指数评价模型研究?},
+  title     = {基于网格的铁路建设工程风险指数评价模型研究},
   journal   = {交通信息与安全},
   year      = {2016},
-  number    = {2016 年 01},
+  number    = {1},
   pages     = {85--90},
   lang      = {zh},
   pinyin    = {guomengxinzhongyanwangfutian},
@@ -1610,7 +1611,7 @@
 @Article{jenelius2012road,
   author    = {Jenelius, Erik and Mattsson, Lars-G{\"o}ran},
   title     = {Road network vulnerability analysis of area-covering disruptions: A grid-based approach with case study},
-  journal   = {Transportation research part A: policy and practice},
+  journal   = {Transportation Research Part A: Policy and Practice},
   year      = {2012},
   volume    = {46},
   number    = {5},
