--- a/tex/Chap5.tex
+++ b/tex/Chap5.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{工程概述}
 
-该区间于2013年12月正式开通运营，为盾构法单圆隧道。隧道区间里程范围为SK22+473.443-SK23+924.353（单线长1450.910$m$）。该区间隧道内径为5500$mm$，外径为6200$mm$，共有1208环（含联络通道特殊管片）。衬砌采用预制钢筋混凝土管片，通过标准环+转弯环的组合方式通缝拼装。衬砌全环由小封顶F、两块标准块B、两块邻接块L及一块大封底块D共6块管片构成，分块角度为2B(65°)+2L(65°)+F(16°)+D(84°)，环宽1200$mm$。管片强度等级C55、抗渗等级为S10。管片纵向和环向均采用直螺栓连接，管片环之间用17根M30的纵向螺栓相连接。工程平面图如图~\ref{fig:天潼路至国际客运中心站区间平面图}~所示。
+该区间于2013年12月正式开通运营，为盾构法单圆隧道。隧道区间里程范围为SK22+473.443-SK23+924.353（单线长1450.910$m$）。该区间隧道内径为5500$mm$，外径为6200$mm$，共有1208环（含联络通道特殊管片）。衬砌采用预制钢筋混凝土管片，通过标准环+转弯环的组合方式通缝拼装。衬砌全环由小封顶F、两块标准块B、两块邻接块L及一块大封底块D共6块管片构成，分块角度为2B(65$°$)+2L(65$°$)+F(16$°$)+D(84$°$)，环宽1200$mm$。管片强度等级C55、抗渗等级为S10。管片纵向和环向均采用直螺栓连接，管片环之间用17根M30的纵向螺栓相连接。工程平面图如图~\ref{fig:天潼路至国际客运中心站区间平面图}~所示。
 
 \begin{figure}[htb!]
     \centering
