--- a/tex/Resume.tex
+++ b/tex/Resume.tex
@@ -24,8 +24,8 @@
 	[4]~朱合华, 李晓军, 林晓东. 基础设施智慧服务系统 (iS3) 及其应用. 土木工程学报 51.1 (2018): 1-12.
 
 	\hangindent 1.5em
-	[5]~林晓东, 李晓军, 林浩. 集成GIS/BIM的盾构隧道全寿命管理系统研究. 隧道建设 2018(6).
-
+	[5]~林晓东, 李晓军, 林浩. 集成GIS/BIM的盾构隧道全寿命管理系统研究. 隧道建设, 38(6), 963-970.
+	
 	% \resumeitem{待发表论文}
 
 	% \hangindent 1.5em
